--- a/Notes/Views/Base.lproj/Main.storyboard
+++ b/Notes/Views/Base.lproj/Main.storyboard
@@ -13,7 +13,7 @@
             <objects>
                 <tableViewController id="YY5-c2-BzI" customClass="MainTableViewController" customModule="Notes" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="iDL-k7-U3j">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <prototypes>
@@ -55,7 +55,7 @@
                                     </constraints>
                                 </tableViewCellContentView>
                                 <connections>
-                                    <segue destination="BYZ-38-t0r" kind="show" id="gbe-LG-kD4"/>
+                                    <segue destination="TVA-Mp-kPa" kind="show" identifier="detailNote" id="Qbr-4Y-umq"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -65,34 +65,91 @@
                         </connections>
                     </tableView>
                     <navigationItem key="navigationItem" id="qPs-E6-uE7">
-                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="YoH-wy-kbx"/>
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="YoH-wy-kbx">
+                            <connections>
+                                <segue destination="BYZ-38-t0r" kind="show" identifier="createNote" id="z8n-BI-2qH"/>
+                            </connections>
+                        </barButtonItem>
                     </navigationItem>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="8RQ-iM-ZaL" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-120.28985507246378" y="93.75"/>
         </scene>
+        <!--Detail View Controller-->
+        <scene sceneID="nn6-3F-MUg">
+            <objects>
+                <viewController id="TVA-Mp-kPa" customClass="DetailViewController" customModule="Notes" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Yt7-LJ-vn4">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gSs-US-pos">
+                                <rect key="frame" x="192" y="788" width="30" height="30"/>
+                                <state key="normal" title="Edit"/>
+                                <connections>
+                                    <segue destination="BYZ-38-t0r" kind="show" identifier="changeNote" id="Gg0-Mq-a7T"/>
+                                </connections>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BT4-y3-MCn">
+                                <rect key="frame" x="10" y="10" width="394" height="36"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="30"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="Example text" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="h0I-ut-maD">
+                                <rect key="frame" x="10" y="56" width="394" height="722"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <color key="textColor" systemColor="labelColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="bzj-Hg-UtP"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="BT4-y3-MCn" firstAttribute="top" secondItem="bzj-Hg-UtP" secondAttribute="top" constant="10" id="7Zg-UR-Dsh"/>
+                            <constraint firstItem="gSs-US-pos" firstAttribute="bottom" secondItem="bzj-Hg-UtP" secondAttribute="bottom" constant="10" id="9rR-yX-cXc"/>
+                            <constraint firstItem="bzj-Hg-UtP" firstAttribute="trailing" secondItem="BT4-y3-MCn" secondAttribute="trailing" constant="10" id="AZH-EN-46H"/>
+                            <constraint firstItem="BT4-y3-MCn" firstAttribute="leading" secondItem="bzj-Hg-UtP" secondAttribute="leading" constant="10" id="DFq-ae-g6V"/>
+                            <constraint firstItem="gSs-US-pos" firstAttribute="top" secondItem="h0I-ut-maD" secondAttribute="bottom" constant="10" id="Dyf-uc-2vd"/>
+                            <constraint firstItem="h0I-ut-maD" firstAttribute="leading" secondItem="bzj-Hg-UtP" secondAttribute="leading" constant="10" id="II0-Vb-H3f"/>
+                            <constraint firstItem="gSs-US-pos" firstAttribute="centerX" secondItem="Yt7-LJ-vn4" secondAttribute="centerX" id="QdE-GX-ZF0"/>
+                            <constraint firstItem="bzj-Hg-UtP" firstAttribute="trailing" secondItem="h0I-ut-maD" secondAttribute="trailing" constant="10" id="hOQ-Oo-a1x"/>
+                            <constraint firstItem="h0I-ut-maD" firstAttribute="top" secondItem="BT4-y3-MCn" secondAttribute="bottom" constant="10" id="mUf-eo-HKi"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="FRN-FY-4ls"/>
+                    <connections>
+                        <outlet property="noteTextView" destination="h0I-ut-maD" id="5LC-kZ-NIt"/>
+                        <outlet property="titleLabel" destination="BT4-y3-MCn" id="mg2-pq-lTA"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="bgG-hb-VDR" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="607" y="425"/>
+        </scene>
         <!--Create View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="CreateViewController" customModule="Notes" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dVN-sZ-wHQ">
-                                <rect key="frame" x="190" y="842" width="34" height="30"/>
+                                <rect key="frame" x="190" y="788" width="34" height="30"/>
                                 <state key="normal" title="Save"/>
                             </button>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="Enter a text." textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="KVN-y3-Gb4">
-                                <rect key="frame" x="10" y="142" width="394" height="690"/>
+                                <rect key="frame" x="10" y="54" width="394" height="724"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <color key="textColor" systemColor="labelColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter a title" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="CZL-Dh-r94">
-                                <rect key="frame" x="10" y="98" width="394" height="34"/>
+                                <rect key="frame" x="10" y="10" width="394" height="34"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
@@ -116,11 +173,12 @@
                         <outlet property="createTextView" destination="KVN-y3-Gb4" id="coD-no-Sik"/>
                         <outlet property="saveButton" destination="dVN-sZ-wHQ" id="vM9-aO-QtR"/>
                         <outlet property="titleTextField" destination="CZL-Dh-r94" id="akl-vX-gkd"/>
+                        <segue destination="YY5-c2-BzI" kind="show" identifier="backToMain" id="fZM-kp-xjN"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="586.95652173913049" y="93.75"/>
+            <point key="canvasLocation" x="600" y="-242"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="Gje-df-YGW">
@@ -141,6 +199,10 @@
             <point key="canvasLocation" x="-852" y="94"/>
         </scene>
     </scenes>
+    <inferredMetricsTieBreakers>
+        <segue reference="z8n-BI-2qH"/>
+        <segue reference="fZM-kp-xjN"/>
+    </inferredMetricsTieBreakers>
     <resources>
         <systemColor name="labelColor">
             <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
