--- a/Notes/Views/Base.lproj/Main.storyboard
+++ b/Notes/Views/Base.lproj/Main.storyboard
@@ -85,7 +85,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gSs-US-pos">
-                                <rect key="frame" x="192" y="788" width="30" height="30"/>
+                                <rect key="frame" x="192" y="768" width="30" height="30"/>
                                 <state key="normal" title="Edit"/>
                                 <connections>
                                     <segue destination="BYZ-38-t0r" kind="show" identifier="changeNote" id="Gg0-Mq-a7T"/>
@@ -98,7 +98,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="Example text" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="h0I-ut-maD">
-                                <rect key="frame" x="10" y="56" width="394" height="722"/>
+                                <rect key="frame" x="10" y="56" width="394" height="702"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <color key="textColor" systemColor="labelColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
@@ -109,7 +109,7 @@
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="BT4-y3-MCn" firstAttribute="top" secondItem="bzj-Hg-UtP" secondAttribute="top" constant="10" id="7Zg-UR-Dsh"/>
-                            <constraint firstItem="gSs-US-pos" firstAttribute="bottom" secondItem="bzj-Hg-UtP" secondAttribute="bottom" constant="10" id="9rR-yX-cXc"/>
+                            <constraint firstItem="bzj-Hg-UtP" firstAttribute="bottom" secondItem="gSs-US-pos" secondAttribute="bottom" constant="10" id="9rR-yX-cXc"/>
                             <constraint firstItem="bzj-Hg-UtP" firstAttribute="trailing" secondItem="BT4-y3-MCn" secondAttribute="trailing" constant="10" id="AZH-EN-46H"/>
                             <constraint firstItem="BT4-y3-MCn" firstAttribute="leading" secondItem="bzj-Hg-UtP" secondAttribute="leading" constant="10" id="DFq-ae-g6V"/>
                             <constraint firstItem="gSs-US-pos" firstAttribute="top" secondItem="h0I-ut-maD" secondAttribute="bottom" constant="10" id="Dyf-uc-2vd"/>
@@ -138,11 +138,11 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dVN-sZ-wHQ">
-                                <rect key="frame" x="190" y="788" width="34" height="30"/>
+                                <rect key="frame" x="190" y="768" width="34" height="30"/>
                                 <state key="normal" title="Save"/>
                             </button>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="Enter a text." textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="KVN-y3-Gb4">
-                                <rect key="frame" x="10" y="54" width="394" height="724"/>
+                                <rect key="frame" x="10" y="54" width="394" height="704"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <color key="textColor" systemColor="labelColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
@@ -163,7 +163,7 @@
                             <constraint firstItem="dVN-sZ-wHQ" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="giM-x1-JAj"/>
                             <constraint firstItem="dVN-sZ-wHQ" firstAttribute="top" secondItem="KVN-y3-Gb4" secondAttribute="bottom" constant="10" id="gmK-P3-HwI"/>
                             <constraint firstItem="KVN-y3-Gb4" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="10" id="mA1-4V-SYo"/>
-                            <constraint firstItem="dVN-sZ-wHQ" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" constant="10" id="qQA-yr-5uT"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="dVN-sZ-wHQ" secondAttribute="bottom" constant="10" id="qQA-yr-5uT"/>
                             <constraint firstItem="KVN-y3-Gb4" firstAttribute="top" secondItem="CZL-Dh-r94" secondAttribute="bottom" constant="10" id="xFb-HW-a2a"/>
                             <constraint firstItem="CZL-Dh-r94" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="10" id="yFG-vd-Gr0"/>
                         </constraints>
@@ -200,7 +200,7 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="z8n-BI-2qH"/>
+        <segue reference="Gg0-Mq-a7T"/>
         <segue reference="fZM-kp-xjN"/>
     </inferredMetricsTieBreakers>
     <resources>
