--- a/Notes/Views/Base.lproj/Main.storyboard
+++ b/Notes/Views/Base.lproj/Main.storyboard
@@ -203,7 +203,7 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="z8n-BI-2qH"/>
+        <segue reference="Gg0-Mq-a7T"/>
         <segue reference="fZM-kp-xjN"/>
     </inferredMetricsTieBreakers>
     <resources>
