--- a/Notes/Views/Base.lproj/Main.storyboard
+++ b/Notes/Views/Base.lproj/Main.storyboard
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="N5Z-PV-hzg">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="32700.99.1234" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="N5Z-PV-hzg">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22685"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -13,12 +14,12 @@
             <objects>
                 <tableViewController id="YY5-c2-BzI" customClass="MainTableViewController" customModule="Notes" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="iDL-k7-U3j">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="886"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <prototypes>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="noteCell" rowHeight="50" id="IOB-oG-XjN" customClass="NoteCell" customModule="Notes" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="28" width="414" height="50"/>
+                                <rect key="frame" x="0.0" y="50" width="414" height="50"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="IOB-oG-XjN" id="Vai-jo-Rdj">
                                     <rect key="frame" x="0.0" y="0.0" width="414" height="50"/>
@@ -84,11 +85,11 @@
             <objects>
                 <viewController id="TVA-Mp-kPa" customClass="DetailViewController" customModule="Notes" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Yt7-LJ-vn4">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="886"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gSs-US-pos">
-                                <rect key="frame" x="192" y="768" width="30" height="30"/>
+                                <rect key="frame" x="192" y="826" width="30" height="30"/>
                                 <state key="normal" title="Edit"/>
                                 <connections>
                                     <segue destination="BYZ-38-t0r" kind="show" identifier="changeNote" id="Gg0-Mq-a7T"/>
@@ -101,7 +102,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="Text" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="h0I-ut-maD">
-                                <rect key="frame" x="10" y="56" width="394" height="702"/>
+                                <rect key="frame" x="10" y="56" width="394" height="760"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <color key="textColor" systemColor="labelColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
@@ -112,7 +113,7 @@
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="BT4-y3-MCn" firstAttribute="top" secondItem="bzj-Hg-UtP" secondAttribute="top" constant="10" id="7Zg-UR-Dsh"/>
-                            <constraint firstItem="bzj-Hg-UtP" firstAttribute="bottom" secondItem="gSs-US-pos" secondAttribute="bottom" constant="10" id="9rR-yX-cXc"/>
+                            <constraint firstItem="bzj-Hg-UtP" firstAttribute="bottom" secondItem="gSs-US-pos" secondAttribute="bottom" constant="30" id="9rR-yX-cXc"/>
                             <constraint firstItem="bzj-Hg-UtP" firstAttribute="trailing" secondItem="BT4-y3-MCn" secondAttribute="trailing" constant="10" id="AZH-EN-46H"/>
                             <constraint firstItem="BT4-y3-MCn" firstAttribute="leading" secondItem="bzj-Hg-UtP" secondAttribute="leading" constant="10" id="DFq-ae-g6V"/>
                             <constraint firstItem="gSs-US-pos" firstAttribute="top" secondItem="h0I-ut-maD" secondAttribute="bottom" constant="10" id="Dyf-uc-2vd"/>
@@ -130,25 +131,25 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="bgG-hb-VDR" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="607" y="425"/>
+            <point key="canvasLocation" x="606" y="442"/>
         </scene>
         <!--Create View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="CreateViewController" customModule="Notes" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="886"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dVN-sZ-wHQ">
-                                <rect key="frame" x="190" y="768" width="34" height="30"/>
+                                <rect key="frame" x="190" y="826" width="34" height="30"/>
                                 <state key="normal" title="Save"/>
                                 <connections>
                                     <action selector="saveButtonClicked:forEvent:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Azq-OO-4Nx"/>
                                 </connections>
                             </button>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="KVN-y3-Gb4">
-                                <rect key="frame" x="10" y="54" width="394" height="704"/>
+                                <rect key="frame" x="10" y="54" width="394" height="762"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <color key="textColor" systemColor="labelColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
@@ -172,7 +173,7 @@
                             <constraint firstItem="dVN-sZ-wHQ" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="giM-x1-JAj"/>
                             <constraint firstItem="dVN-sZ-wHQ" firstAttribute="top" secondItem="KVN-y3-Gb4" secondAttribute="bottom" constant="10" id="gmK-P3-HwI"/>
                             <constraint firstItem="KVN-y3-Gb4" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="10" id="mA1-4V-SYo"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="dVN-sZ-wHQ" secondAttribute="bottom" constant="10" id="qQA-yr-5uT"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="dVN-sZ-wHQ" secondAttribute="bottom" constant="30" id="qQA-yr-5uT"/>
                             <constraint firstItem="KVN-y3-Gb4" firstAttribute="top" secondItem="CZL-Dh-r94" secondAttribute="bottom" constant="10" id="xFb-HW-a2a"/>
                             <constraint firstItem="CZL-Dh-r94" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="10" id="yFG-vd-Gr0"/>
                         </constraints>
@@ -187,7 +188,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="600" y="-242"/>
+            <point key="canvasLocation" x="606" y="-244"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="Gje-df-YGW">
@@ -195,7 +196,7 @@
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="N5Z-PV-hzg" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="oMP-D1-C9u">
-                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <rect key="frame" x="0.0" y="48" width="414" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
